ARM32 is broken after JDK-8201543 (Modularize C1 GC barriers)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b12

      Lots of build failures, like:

      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:378:14: error: prototype for 'LIR_Address* LIRGenerator::emit_array_address(LIR_Opr, LIR_Opr, BasicType, bool)' does not match any in class 'LIRGenerator'
       LIR_Address* LIRGenerator::emit_array_address(LIR_Opr array_opr, LIR_Opr index_opr,
                    ^~~~~~~~~~~~
      In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:30:0:
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/c1/c1_LIRGenerator.hpp:375:16: error: candidate is: LIR_Address* LIRGenerator::emit_array_address(LIR_Opr, LIR_Opr, BasicType)
         LIR_Address* emit_array_address(LIR_Opr array_opr, LIR_Opr index_opr, BasicType type);
                      ^~~~~~~~~~~~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:501:105: error: no 'void LIRGenerator::CardTableBarrierSet_post_barrier_helper(LIR_OprDesc*, LIR_Const*)' member function declared in class 'LIRGenerator'
       void LIRGenerator::CardTableBarrierSet_post_barrier_helper(LIR_OprDesc* addr, LIR_Const* card_table_base) {
                                                                                                               ^
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp: In member function 'LIR_OprDesc* LIRGenerator::atomic_xchg(BasicType, LIR_Opr, LIRItem&)':
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:1027:11: error: 'addr_ptr' was not declared in this scope
         __ xchg(addr_ptr, data, dst, tmp);
                 ^~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:1027:21: error: 'data' was not declared in this scope
         __ xchg(addr_ptr, data, dst, tmp);
                           ^~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/arm/c1_LIRGenerator_arm.cpp:1027:27: error: 'dst' was not declared in this scope
         __ xchg(addr_ptr, data, dst, tmp);
                                 ^~~
      /bin/cp: cannot create regular file '/pool/buildbot/slaves/sobornost/jdkX/build/build/linux-arm-normal-server-fastdebug/make-support/failure-logs/hotspot_variant-server_libjvm_objs_c1_LIRGenerator_arm.o.log': No such file or directory

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: