8202379: ARM32 is broken after JDK-8201543 (Modularize C1 GC barriers)

Reviewed-by: aph, eosterlund